--- a/css/video.css
+++ b/css/video.css
@@ -18,6 +18,11 @@ i {
     cursor: pointer;
 }
 
+video::-webkit-media-controls-enclosure {
+    /*禁用播放器控制栏的样式*/
+    display: none !important;
+}
+
 .video {
     width: 800px;
     height: 494px;
@@ -57,12 +62,14 @@ video {
     background-color: rgba(194, 188, 188, 0.3);
     cursor: pointer;
 }
-.progress .move{
+
+.progress .move {
     width: 0px;
     height: 4px;
     background-color: rgba(237, 101, 9, 0.79);
     cursor: pointer;
 }
+
 .bottom {
     width: 800px;
     height: 40px;
@@ -72,14 +79,16 @@ video {
 
 .bottom_l {
     float: left;
-  
 }
+
 .bottom_l span {
-    margin-left: 15px;  
+    margin-left: 15px;
 }
+
 .bottom_r {
     float: right;
 }
+
 .bottom_r span {
     margin-right: 15px;
 }
